# demos

shapes/: CMakeLists.txt
shapes/src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  model.cpp  model.h
